# js-ast-analyzer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  test.kt
src/: error.rs  lib.rs  main.rs  parser.rs  types.rs
src/analyzers/: best_practices.rs  complexity.rs  magic_numbers.rs  mod.rs  naming.rs  null_safety.rs  patterns.rs  security.rs  security_id.rs  typescript.rs  unused.rs
src/languages/: mod.rs
src/languages/dart/: mod.rs  parser.rs
src/languages/javascript/: mod.rs  parser.rs
src/languages/javascript/analyzers/: best_practices.rs  complexity.rs  magic_numbers.rs  naming.rs  null_safety.rs  patterns.rs  security.rs  typescript.rs  unused.rs
src/languages/kotlin/: mod.rs  parser.rs
src/languages/python/: mod.rs  parser.rs
src/output/: mod.rs
test-samples/: test-complexity.js  test-unused.js
test-samples/dart/: sample.dart  test-complexity.dart  test-magic-numbers.dart  test-naming.dart  test-null-safety.dart  test-unused.dart
test-samples/javascript/: sample.js  sample.ts  test-magic-numbers.js  test-naming.js  test-new-rules.js  test-null-safety.js
test-samples/kotlin/: clean.kt  features.kt  printing.kt  test.kt
test-samples/kotlin/validation/: basic_rules.kt  complexity.kt  naming.kt  unused.kt
test-samples/python/: basics.py  complexity.py  naming.py
tests/: test_complexity.rs  test_dart_complexity.rs  test_dart_magic_numbers.rs  test_dart_naming.rs  test_dart_null_safety.rs  test_dart_unused.rs  test_integration.rs  test_magic_numbers.rs  test_naming.rs  test_null_safety.rs  test_python_integration.rs  test_unused.rs
