[package]
name = "js-ast-analyzer"
version = "0.1.0"
edition = "2021"
description = "JavaScript/TypeScript AST analyzer for code quality checks"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "js_ast_analyzer"
path = "src/lib.rs"

[[bin]]
name = "js-ast-analyzer"
path = "src/main.rs"

[dependencies]
# OXC Parser - Modern, fast JavaScript/TypeScript parser in Rust
oxc_parser = "0.34"
oxc_span = "0.34"
oxc_ast = "0.34"
oxc_semantic = "0.34"
oxc_allocator = "0.34"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
walkdir = "2.5"

# Colored terminal output
colored = "2.1"
tree-sitter = "0.22"
tree-sitter-kotlin = "0.3.8"
tree-sitter-dart = "0.0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
